basis af, alleen nog een schrijf- en lees functie voor bestanden is nodig

--- a/PJInfo/www/rooster.html
+++ b/PJInfo/www/rooster.html
@@ -27,7 +27,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>Roosterwijzigingen</title>
     </head>
     <body>
         <!-- banner 1 -->
@@ -36,7 +36,7 @@
         </div>
         <!-- banner 2 -->
         <div id="banner2">
-            <a href="index.html"><h2>Meldingen</h2></a>
+            <a href="index.html"><h2>Mededelingen</h2></a>
             <a href="rooster.html" style="color: #cccccc"><h2>Rooster</h2></a>
         </div>
         <!-- footer -->
@@ -44,6 +44,7 @@
             <a href="instellingen.html"><h2>Instellingen</h2></a>
         </div>
         <!-- iframe met pagina -->
+        <iframe src="http://www3.pj.nl/gym_info_leerlingen/subst_001.htm"/>
         <!-- js bronnen -->
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
