--- a/PJInfo/www/index.html
+++ b/PJInfo/www/index.html
@@ -26,7 +26,7 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>Mededelingen</title>
     </head>
     <body>
         <!-- banner 1 -->
@@ -35,8 +35,8 @@
         </div>
         <!-- banner 2 -->
         <div id="banner2">
-            <a href="index.html" style="color: #cccccc"><h2>Meldingen</h2></a>
-            <a href="rooster.html"><h2>Rooster</h2></a>
+            <a href="index.html" style="color: #cccccc"><h2>Mededelingen</h2></a>
+            <a href="rooster.html"><h2>Roosterwijzigingen</h2></a>
         </div>
         <!-- footer -->
         <div id="footer">
