--- a/PJInfo/www/instellingen.html
+++ b/PJInfo/www/instellingen.html
@@ -27,7 +27,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
+        <title>Instellingen</title>
     </head>
     <body>
         <!-- banner 1 -->
@@ -36,8 +36,8 @@
         </div>
         <!-- banner 2 -->
         <div id="banner2">
-            <a href="index.html"><h2>Meldingen</h2></a>
-            <a href="index2.html"><h2>Rooster</h2></a>
+            <a href="index.html"><h2>Mededelingen</h2></a>
+            <a href="index2.html"><h2>Roosterwijzigingen</h2></a>
         </div>
         <!-- selecteer school -->
         <div id="instellingen">
@@ -60,6 +60,14 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
+        </script>
+        <!-- bestand schrijven -->
+        <script>
+            /* schrijf naar bestand */
+            function writefile()
+            {
+                
+            }
         </script>
     </body>
 </html>
