--- a/PJInfo/www/index.html
+++ b/PJInfo/www/index.html
@@ -26,27 +26,58 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Mededelingen</title>
+		<script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <title>PJ Info</title>
     </head>
     <body>
+	
         <!-- banner 1 -->
         <div id="banner">
-            <h1>PJ info</h1>
+            <h1>PJ Info</h1>
         </div>
+		
         <!-- banner 2 -->
         <div id="banner2">
-            <a href="index.html" style="color: #cccccc"><h2>Mededelingen</h2></a>
-            <a href="rooster.html"><h2>Roosterwijzigingen</h2></a>
+            <a class="tab selected" id="tab-roosterwijzigingen" onclick="app.switchPage('roosterwijzigingen');">
+				<h2>Roosterwijzigingen</h2>
+			</a>
+            <a class="tab" id="tab-mededelingen" onclick="app.switchPage('mededelingen');">
+				<h2>Mededelingen</h2>
+			</a>
         </div>
+		
         <!-- footer -->
         <div id="footer">
-            <a href="instellingen.html"><h2>Instellingen</h2></a>
+            <a class="tab" id="tab-instellingen" onclick="app.switchPage('instellingen')">
+				<h2>Instellingen</h2>
+			</a>
         </div>
-        <!-- iframe met pagina -->
-        <iframe src="http://www3.pj.nl/infoschermgymnasium"/>
+		
+		<!-- "page" divs met de verschillende paginas -->
+		<div class="page selected" id="roosterwijzigingen">
+			
+		</div>
+		
+		<div class="page" id="mededelingen">
+		
+		</div>
+		
+		<div class="page" id="instellingen">
+			<div id="instellingen">
+            <h2>Selecteer school</h2>
+				<select>
+					<option value="gymnasium">Stedelijk Gymnasium Leeuwarden</option>
+					<option value="montessori">Montessori High School</option>
+					<option value="lyceum">Leeuwarder Lyceum</option>
+					<option value="foorakker">De Foorakker</option>
+					<option value="dedyk">De Dyk</option>
+					<option value="dokkum">Dalton Dokkum</option>
+				</select>
+			</div>
+		</div>
+		
         <!-- js bronnen -->
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
