--- a/PJInfo/www/index.html
+++ b/PJInfo/www/index.html
@@ -74,6 +74,7 @@
 					<option class="school" value="dedyk">De Dyk</option>
 					<option class="school" value="dokkum">Dalton Dokkum</option>
 				</select>
+				<button onclick="alert(localStorage.school)">Check school</button>
 			</div>
 		</div>
 		
