IFrame fix attempt

--- a/www/index.html
+++ b/www/index.html
@@ -59,15 +59,15 @@
 		
 		<!-- "page" divs met de verschillende paginas -->
 		<div class="page selected" id="roosterwijzigingen">
-			
+			<p>Dit zijn de roosterwijzigingen</p>
 		</div>
 		
 		<div class="page" id="mededelingen">
-		
+			<p>Dit zijn de mededelingen</p>
 		</div>
 		
 		<div class="page" id="leraarrooster">
-			<p style="padding-top: 30%; color: black;">Leraarrooster!!</p>
+			<p>Dit zijn de leraarroosters</p>
 		</div>
 		
 		<div class="page" id="instellingen">
